--- a/compile/Makefile
+++ b/compile/Makefile
@@ -39,6 +39,7 @@ REBUILDFLAGS	=	-s $(TOPDIR)/system  debug.c		\
 			-s $(TOPDIR)/device/nam			\
 			-s $(TOPDIR)/device/ram			\
 			-s $(TOPDIR)/device/lfs			\
+			-s $(TOPDIR)/device/kbd			\
 			-s $(TOPDIR)/shell  
 
 INCLUDE		=	-I$(TOPDIR)/include
