--- a/config/Makefile
+++ b/config/Makefile
@@ -7,13 +7,8 @@ COMPILER_ROOT	=	/usr/bin/
 CC	= ${COMPILER_ROOT}gcc
 LEX	= ${COMPILER_ROOT}flex
 YACC	= ${COMPILER_ROOT}bison -y	# Flag enables yacc-compatible filenames
-CFLAGS	= -w
-
-ifeq ($(shell uname), Darwin)
-	LFLAGS = -ll -ly
-else
-	LFLAGS	= -lfl
-endif
+CFLAGS	= 
+LFLAGS	= -lfl
 
 #
 # Name of the configuration program
@@ -24,7 +19,7 @@ CONFIG	= config
 all:		conf.h conf.c
 
 ${CONFIG}:	lex.yy.c y.tab.c
-		$(CC) ${CFLAGS} -o $@ y.tab.c ${LFLAGS}
+		$(CC) ${CFLAGS} -v -o $@ y.tab.c ${LFLAGS}
 
 lex.yy.c:	config.l
 		$(LEX) config.l
@@ -33,24 +28,13 @@ y.tab.c:	config.y
 		$(YACC) config.y
 
 clean:
-		rm -f config lex.yy.c y.tab.c conf.h.orig
+		rm -f config lex.yy.c y.tab.c
 
 conf.h:		config Configuration
 		./config Configuration conf.c conf.h
-		mv conf.h conf.h.orig
-		echo '#ifndef _HEADER_H' > conf.h
-		echo '#define _HEADER_H' >> conf.h
-		cat conf.h.orig >> conf.h
-		echo >> conf.h
-		echo '#endif' >> conf.h
 
 conf.c:		config Configuration
 		./config Configuration conf.c conf.h
-		mv conf.h conf.h.orig
-		cp conf.header.h conf.h
-		cat conf.h.orig >> conf.h
-		echo >> conf.h
-		echo '#endif' >> conf.h
 
 install:	conf.h conf.c
 		cp -p conf.h ../include
